load("//lib:platform_asset.bzl", "multi_platform_assets")

VERSION = "0.4.0"

SUPPORTED_PLATFORMS = [
    "darwin_amd64",
    "darwin_arm64",
    "linux_amd64",
    "windows_amd64",
]

GITHUB_URL = "https://github.com/tweag/topiary/releases/download/v%s" % VERSION

multi_platform_assets(
    name = "topiary",
    binary = "topiary",
    darwin_ext = "tar.xz",
    linux_ext = "tar.xz",
    platforms = SUPPORTED_PLATFORMS,
    platforms_map = {
        "darwin_amd64": "x86_64-apple-darwin",
        "darwin_arm64": "aarch64-apple-darwin",
        "linux_amd64": "x86_64-unknown-linux-gnu",
        "windows_amd64": "x86_64-pc-windows-msvc",
    },
    prefix = "topiary-cli-{platform}/",
    url = "%s/topiary-cli-{platform}.{ext}" % GITHUB_URL,
)
