load("//lib:platform_binary.bzl", "platform_binaries")

VERSION = "1.21.0"

SUPPORTED_PLATFORMS = [
    "darwin_amd64",
    "darwin_arm64",
    "linux_amd64",
    "linux_arm64",
    "windows_amd64",
    "windows_arm64",
]

GITHUB_URL = "https://github.com/cargo-prebuilt/index/releases/download/typos-cli-%s" % VERSION

platform_binaries(
    name = "typos",
    binary = "typos",
    platforms = SUPPORTED_PLATFORMS,
    platforms_map = {
        "darwin_amd64": "x85_64-apple-darwin",
        "darwin_arm64": "aarch64-apple-darwin",
        "linux_amd64": "x86_64-unknown-linux-musl",
        "linux_arm64": "aarch64-unknown-linux-musl",
        "windows_amd64": "x86_64-pc-windows-msvc",
        "windows_arm64": "aarch64-pc-windows-msvc",
    },
    url = "%s/{platform}.tar.gz" % GITHUB_URL,
)
